@@ -18,7 +18,8 @@
 class Smarty_Method_DisableCompileCheck extends Smarty_Internal_Base {
     public function execute()
     {
-        return $this->smarty->compile_check = false;
+        $this->smarty->compile_check = false;
+        return;
     } 
 } 
 
