@@ -18,7 +18,8 @@
 class Smarty_Method_disableDefaultTimezone extends Smarty_Internal_Base {
     public function execute()
     {
-        return $this->smarty->set_timezone = false;
+        $this->smarty->set_timezone = false;
+        return;
     } 
 } 
 
