@@ -18,7 +18,8 @@
 class Smarty_Method_enableConfigOverwrite extends Smarty_Internal_Base {
     public function execute()
     {
-        return $this->smarty->config_overwrite = true;
+        $this->smarty->config_overwrite = true;
+        return;
     } 
 } 
 
