@@ -1,3 +1,7 @@
+04/06/2009
+- variable scopes LOCAL_SCOPE, PARENT_SCOPE, ROOT_SCOPE
+- more getter/setter methodes
+
 04/05/2009
 - replaced new array looping syntax {for $foo in $array} with {foreach $foo in $array} to avoid confusion
 - added append array for short form of assign  {$foo[]='bar'} and allow assignments to nested arrays {$foo['bla']['blue']='bar'}
